Main stage modified - bpmn stage added