@@ -31,6 +31,7 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    mavenCentral()
 }
 
 javafx {
@@ -40,6 +41,62 @@ javafx {
 run{
     standardInput = System.in
 }
+
+
+compileJava {
+
+    
+    // options.encoding = "UTF-8"
+    // options.incremental = true
+
+    /*
+    options.compilerArgs += [
+            "--module-path C:/work/javafx-sdk/lib/",
+            "--add-modules=javafx.controls,javafx.fxml,javafx.graphics,javafx.controls,javafx.base,javafx.media",
+            // For various usages of TraversalEngine
+            "--add-exports=javafx.graphics/com.sun.javafx.scene=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.scene.text=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.geom=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
+            "--add-exports=javafx.graphics/com.sun.javafx.util=com.jfoenix",
+
+            // For various behaviors across controls
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
+            "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
+            "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
+            
+            "--add-exports=javafx.base/com.sun.javafx.event=com.jfoenix"
+    ]
+    */
+
+    
+    doLast {
+
+        options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
+        ])  
+        options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED"
+        ])  
+        options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.base/com.sun.javafx.binding=ALL-UNNAMED"
+        ])   
+        options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED"
+        ])  
+        options.compilerArgs.addAll([
+            "--add-exports",
+            "javafx.base/com.sun.javafx.event=ALL-UNNAMED"
+        ])
+
+    }
+ 
+}
+
 
 dependencies {
     // This dependency is found on compile classpath of this component and consumers.
@@ -51,6 +108,10 @@ dependencies {
     compile 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 
     compile 'com.jfoenix:jfoenix:9.0.8'
+
+    compile 'de.jensd:fontawesomefx-commons:9.1.2'
+    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2'
+    compile 'de.jensd:fontawesomefx-materialicons:2.2.0-9.1.2'
     
     compile files('libs/bpmn-nodes.jar')
 
